# phd-thesis-fitting-wear-coefficient

./: LICENSE  coefficient_fitting.ipynb  data-analysis-wear-length.ipynb  data-analysis.ipynb  data_clustering_pre_clustering.ipynb  htc-fitting.ipynb  pyproject.toml  utilities.py
in_profile/: __init__.py  bst500_density.csv  bst500_specific_heat_capacity.csv  bst500_specific_heat_capacity_real_measurement.csv  bst500_thermal_conductivity.csv  bst500_thermal_diffusivity.csv
rolling_sequence/: __init__.py  finishing_train.py  intermediate_train.py  roughing_train.py
utilities/: __init__.py  helpers.py  optimizations.py  roll_pass.py  wear_coefficient_functions.py
wear_data/: wear_data_2024-03-07.json
wear_data/RPD1/: wear_data_2024-02-07.json  wear_data_2024-03-07.json  wear_data_2024-04-02.json  wear_data_2024-04-25.json
wear_data/RPD2/: wear_data_2024-05-17.json  wear_data_2024-06-14.json  wear_data_2024-07-15.json
wear_data/RPD3/: wear_data_2024-11-25.json  wear_data_2025-02-11.json  wear_data_2025-07-04.json  wear_data_2025-07-07.json  wear_data_2025_06_10.json
wear_data/RPD4/: wear_data_2024-07-01.json
wear_data/e10_7/: wear_data_2024-06-14.json  wear_data_2024-07-15.json
wear_data/e11_2/: wear_data_2024-04-02.json  wear_data_2024-04-25.json
